--- a/src/Demos/CMakeLists.txt
+++ b/src/Demos/CMakeLists.txt
@@ -3,9 +3,10 @@ function(build_demo demo_name)
 	message(${CMAKE_CURRENT_SOURCE_DIR}/${demo_name})
 	file(GLOB SOURCE *.cpp *.h ${demo_dir}/*)
 	message(${FRAMEWORK_PATH})
-	include_directories(${FRAMEWORK_PATH})
+	message(${CMAKE_SOURCE_DIR}/external)
+	include_directories(${FRAMEWORK_PATH} ${EXTERNAL_PATH})
 	add_executable(${demo_name} WIN32 ${SOURCE})
-	target_link_libraries(${demo_name} Framework)
+	target_link_libraries(${demo_name} Framework ${VULKAN_LIBRARY})
 endfunction(build_demo)
 
 function(build_demos)
