--- a/src/Framework/CMakeLists.txt
+++ b/src/Framework/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(GLOB FRAMEWORK_SCRS "*.cpp")
 file(GLOB FRAMEWORD_HEADERS "*.h")
 
+include_directories(${EXTERNAL_PATH})
 add_library(Framework STATIC ${FRAMEWORK_SCRS} ${FRAMEWORD_HEADERS})
